--- a/糖尿病康复伴侣/TableViewDoctorCell.xib
+++ b/糖尿病康复伴侣/TableViewDoctorCell.xib
@@ -55,7 +55,7 @@
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZaK-Qy-JEO">
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZaK-Qy-JEO">
                         <rect key="frame" x="6" y="30" width="5" height="5"/>
                         <color key="backgroundColor" red="1" green="0.17735246473866717" blue="0.249277430718158" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
