--- a/糖尿病康复伴侣/FoodRecordCell.xib
+++ b/糖尿病康复伴侣/FoodRecordCell.xib
@@ -49,7 +49,7 @@
                             <constraint firstAttribute="width" constant="60" id="eag-yT-raT"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits"/>
+                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                     </textField>
                 </subviews>
                 <color key="backgroundColor" red="0.176293643" green="0.78935505370000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
